added a new link to youtube

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@ git prctc 1 site
 </title>
 </head>
 <body>
-<h1 style="color:red">
+<h1 style="color:pink">
 This is my gihub website
 </h1>
 
+  <h3>
+    <a href="https://youtube.com">this is the link to youtube</a>
+  </h3> 
+  
+  
 </body>
 </html>
