--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ This is my gihub website
 </h1>
 
   <h3>
-    <a href="htyoutube.com">this kj,bvj,vhjvjh jhvjvjvhjhv jhvjhv,j,jv ,jhv jhvjv,jhvh,jvvh vjvj,vvjhjhjjvhjhng</a>
+    <a href="youtube.com">this kj,bvj,vhjvjh jhvjvjvhjhv jhvjhv,j,jv ,jhv jhvjv,jhvh,jvvh vjvj,vvjhjhjjvhjhng</a>
   </h3> 
   
   <h1>Chng to check aws folder can be cloned in vs code or not</h1>
